// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum Sex {
  M
  F
  Other
}

enum AppointmentStatus {
  reserved
  in_progress
  attended
  cancelled
  no_show
}

enum PaymentMethod {
  cash
  card
  transfer
  yape
  plin
  account_credit // Pago usando saldo a favor del paciente
}

enum CommissionStatus {
  pending      // Generada, esperando aprobación
  approved     // Aprobada, lista para pagar
  paid         // Pagada
  cancelled    // Cancelada
  rejected     // Rechazada
}

enum PaymentOrderStatus {
  pending // La orden de pago no ha recibido pagos
  partial // Ha pagado algo pero no todo
  paid // Pagado completamente
  cancelled // Cancelado/anulado
}

enum PaymentType {
  payment_order_payment // Pago de orden de pago (tiene paymentOrderId)
  reservation // Adelanto/reserva de cita (tiene appointmentId, no paymentOrderId)
  service_payment // Pago directo de servicio (tiene appointmentId)
  account_credit // Abono a cuenta del paciente (solo patientId)
  penalty // Multa o penalidad
  other // Otro tipo de pago
}

model Role {
  id          String   @id @default(uuid())
  name        String   @unique
  displayName String   @map("display_name")
  description String?
  createdAt   DateTime @default(now()) @map("created_at")

  users User[]

  @@map("roles")
}

model User {
  id           String    @id @default(uuid())
  email        String    @unique
  passwordHash String    @map("password_hash")
  firstName    String    @map("first_name")
  lastName     String    @map("last_name")
  roleId       String?   @map("role_id")
  sex          Sex?
  dateOfBirth  DateTime? @map("date_of_birth")
  isActive           Boolean   @default(true) @map("is_active")
  mustChangePassword Boolean   @default(false) @map("must_change_password")
  themeMode          String    @default("auto") @map("theme_mode")
  createdAt    DateTime  @default(now()) @map("created_at")
  updatedAt    DateTime  @updatedAt @map("updated_at")

  // Relations
  role                       Role?                @relation(fields: [roleId], references: [id])
  patientsCreated            Patient[]            @relation("PatientCreatedBy")
  patientPasswordsSet        Patient[]            @relation("PatientPasswordSetByStaff")
  ordersCreated              ServiceInstance[]            @relation("OrderCreatedBy")
  ordersConcluded            ServiceInstance[]            @relation("OrderConcludedBy")
  appointmentsCreated        Appointment[]        @relation("AppointmentCreatedBy")
  appointmentsAttended       Appointment[]        @relation("AppointmentAttendedBy")
  patientRecords             PatientRecord[]
  commissions                Commission[]         @relation("SalesPersonCommissions")
  commissionsApproved        Commission[]         @relation("CommissionApprovals")
  commissionsPaid            Commission[]         @relation("CommissionPayments")
  paymentOrdersCreated       PaymentOrder[]       @relation("PaymentOrderCreatedBy")
  paymentsCreated            Payment[]            @relation("PaymentCreatedBy")
  appointmentServicesDeleted Session[] @relation("AppointmentSessionDeletedBy")
  appointmentNotesCreated    AppointmentNote[]    @relation("AppointmentNoteCreatedBy")

  @@map("users")
}

model Patient {
  id          String   @id @default(uuid())
  firstName   String   @map("first_name")
  lastName    String   @map("last_name")
  dni         String   @unique
  dateOfBirth DateTime @map("date_of_birth")
  sex         Sex
  phone       String?
  email       String?
  address     String?
  createdById String   @map("created_by_id")
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  photoUrl             String?   @map("photo_url")
  accountBalance       Decimal   @default(0.00) @map("account_balance") @db.Decimal(10, 2)

  // Portal de Pacientes - Campos de Autenticación
  passwordHash         String?   @map("password_hash") // Bcrypt hash (creado por staff)
  hasPortalAccess      Boolean   @default(false) @map("has_portal_access") // Puede acceder al portal
  lastLogin            DateTime? @map("last_login")
  passwordSetByStaffId String?   @map("password_set_by_staff_id") // Qué staff creó/resetó la contraseña
  passwordSetAt        DateTime? @map("password_set_at") // Cuándo se creó/cambió la contraseña

  // Relations
  createdBy          User            @relation("PatientCreatedBy", fields: [createdById], references: [id])
  passwordSetByStaff User?           @relation("PatientPasswordSetByStaff", fields: [passwordSetByStaffId], references: [id])
  orders             ServiceInstance[]
  appointments       Appointment[]
  patientRecords     PatientRecord[]
  paymentOrders      PaymentOrder[]
  payments           Payment[]

  @@map("patients")
}

model ServiceTemplate {
  id              String    @id @default(uuid())
  name            String
  description     String?
  basePrice       Decimal   @map("base_price") @db.Decimal(10, 2)
  defaultSessions Int       @default(1) @map("default_sessions")
  icon            String? // Nombre del icono para identificación visual
  isActive        Boolean   @default(true) @map("is_active")
  deletedAt       DateTime? @map("deleted_at")
  createdAt       DateTime  @default(now()) @map("created_at")
  updatedAt       DateTime  @updatedAt @map("updated_at")

  // Commission settings
  commissionType        String?   @default("percentage") @map("commission_type") // 'percentage' o 'fixed'
  commissionRate        Decimal?  @map("commission_rate") @db.Decimal(5, 4) // Porcentaje de comisión para este servicio (ej: 0.1000 = 10%)
  commissionFixedAmount Decimal?  @map("commission_fixed_amount") @db.Decimal(10, 2) // Monto fijo de comisión
  commissionNotes       String?   @map("commission_notes") // Notas sobre la comisión de este servicio

  // Relations
  orders                 ServiceInstance[]
  commissions            Commission[]

  @@map("service_templates")
}

model ServiceInstance {
  id                String   @id @default(uuid())
  patientId         String   @map("patient_id")
  serviceTemplateId String   @map("service_template_id")
  totalSessions     Int      @map("total_sessions")
  completedSessions Int      @default(0) @map("completed_sessions")
  originalPrice     Decimal  @map("original_price") @db.Decimal(10, 2)
  discount          Decimal  @default(0) @map("discount") @db.Decimal(10, 2)
  finalPrice        Decimal  @map("final_price") @db.Decimal(10, 2)
  notes             String?
  paymentOrderId    String?   @map("payment_order_id")
  concludedAt       DateTime? @map("concluded_at")   // Tratamiento concluido antes de completar todas las sesiones
  concludedById     String?   @map("concluded_by_id")
  concludeReason    String?   @map("conclude_reason")
  createdById       String    @map("created_by_id")
  createdAt         DateTime  @default(now()) @map("created_at")
  updatedAt         DateTime  @updatedAt @map("updated_at")

  // Relations
  patient             Patient              @relation(fields: [patientId], references: [id])
  service             ServiceTemplate      @relation(fields: [serviceTemplateId], references: [id])
  createdBy           User                 @relation("OrderCreatedBy", fields: [createdById], references: [id])
  concludedBy         User?                @relation("OrderConcludedBy", fields: [concludedById], references: [id])
  paymentOrder        PaymentOrder?        @relation(fields: [paymentOrderId], references: [id])
  appointmentServices Session[]
  commissions         Commission[]

  @@map("service_instances")
}

model Appointment {
  id                    String            @id @default(uuid())
  patientId             String            @map("patient_id")
  scheduledDate         DateTime          @map("scheduled_date")
  durationMinutes       Int               @default(60) @map("duration_minutes")
  status                AppointmentStatus @default(reserved)
  reservationAmount     Decimal?          @map("reservation_amount") @db.Decimal(10, 2)
  reservationReceiptUrl String?           @map("reservation_receipt_url")
  createdById           String            @map("created_by_id")
  attendedById          String?           @map("attended_by_id")
  attendedAt            DateTime?         @map("attended_at")
  createdAt             DateTime          @default(now()) @map("created_at")
  updatedAt             DateTime          @updatedAt @map("updated_at")

  // Relations
  patient             Patient              @relation(fields: [patientId], references: [id])
  createdBy           User                 @relation("AppointmentCreatedBy", fields: [createdById], references: [id])
  attendedBy          User?                @relation("AppointmentAttendedBy", fields: [attendedById], references: [id])
  patientRecords      PatientRecord[]
  commissions         Commission[]
  appointmentServices Session[]
  payments            Payment[]
  appointmentNotes    AppointmentNote[]

  @@map("appointments")
}

model AppointmentNote {
  id            String   @id @default(uuid())
  appointmentId String   @map("appointment_id")
  note          String   @db.Text
  createdById   String   @map("created_by_id")
  createdAt     DateTime @default(now()) @map("created_at")

  // Relations
  appointment Appointment @relation(fields: [appointmentId], references: [id], onDelete: Cascade)
  createdBy   User        @relation("AppointmentNoteCreatedBy", fields: [createdById], references: [id])

  @@map("appointment_notes")
}

model PatientRecord {
  id                String   @id @default(uuid())
  patientId         String   @map("patient_id")
  appointmentId     String   @map("appointment_id")
  weight            Decimal? @db.Decimal(5, 2)
  bodyMeasurement   Json?    @map("body_measurement")
  healthNotes       String?  @map("health_notes")
  beforePhotoUrls   Json?    @map("before_photo_urls")
  afterPhotoUrls    Json?    @map("after_photo_urls")
  createdById       String   @map("created_by_id")
  createdAt         DateTime @default(now()) @map("created_at")

  // Relations
  patient         Patient     @relation(fields: [patientId], references: [id])
  appointment     Appointment @relation(fields: [appointmentId], references: [id])
  createdBy       User        @relation(fields: [createdById], references: [id])

  @@map("patient_records")
}

model Commission {
  id                String           @id @default(uuid())
  salesPersonId     String           @map("sales_person_id")
  appointmentId     String           @map("appointment_id")
  serviceInstanceId String?          @map("service_instance_id") // El paquete/orden específico que generó la comisión
  serviceTemplateId String?          @map("service_template_id") // El servicio que generó la comisión
  commissionRate    Decimal          @map("commission_rate") @db.Decimal(5, 4) // Tasa aplicada (copia del servicio al momento de la venta)
  baseAmount        Decimal          @map("base_amount") @db.Decimal(10, 2) // Monto sobre el cual se calcula (precio del paquete)
  commissionAmount  Decimal          @map("commission_amount") @db.Decimal(10, 2) // Monto final de comisión
  status            CommissionStatus @default(pending)

  // Aprobación y pago
  approvedAt       DateTime?        @map("approved_at")
  approvedById     String?          @map("approved_by_id")
  paidAt           DateTime?        @map("paid_at")
  paidById         String?          @map("paid_by_id")
  paymentMethod    PaymentMethod?   @map("payment_method")
  paymentReference String?          @map("payment_reference") // Número de transferencia, cheque, etc.

  // Metadata
  notes            String?          @db.Text
  rejectionReason  String?          @map("rejection_reason") @db.Text
  createdAt        DateTime         @default(now()) @map("created_at")
  updatedAt        DateTime         @updatedAt @map("updated_at")

  // Relations
  salesPerson      User              @relation("SalesPersonCommissions", fields: [salesPersonId], references: [id])
  appointment      Appointment       @relation(fields: [appointmentId], references: [id])
  serviceInstance  ServiceInstance?  @relation(fields: [serviceInstanceId], references: [id])
  serviceTemplate  ServiceTemplate?  @relation(fields: [serviceTemplateId], references: [id])
  approvedBy       User?             @relation("CommissionApprovals", fields: [approvedById], references: [id])
  paidBy           User?             @relation("CommissionPayments", fields: [paidById], references: [id])

  @@map("commissions")
}

model Session {
  id                String   @id @default(uuid())
  appointmentId     String   @map("appointment_id")
  serviceInstanceId String   @map("service_instance_id")
  sessionNumber     Int?     @map("session_number")
  createdAt         DateTime @default(now()) @map("created_at")

  // Soft Delete fields
  deletedAt    DateTime? @map("deleted_at")
  deletedById  String?   @map("deleted_by_id")
  deleteReason String?   @map("delete_reason")

  // Relations
  appointment     Appointment     @relation(fields: [appointmentId], references: [id], onDelete: Cascade)
  serviceInstance ServiceInstance @relation(fields: [serviceInstanceId], references: [id])
  deletedBy       User?           @relation("AppointmentSessionDeletedBy", fields: [deletedById], references: [id])

  @@map("sessions")
}

model PaymentOrder {
  id          String        @id @default(uuid())
  patientId   String        @map("patient_id")
  totalAmount Decimal       @map("total_amount") @db.Decimal(10, 2)
  status      PaymentOrderStatus @default(pending)
  dueDate     DateTime?     @map("due_date")
  createdById String        @map("created_by_id")
  createdAt   DateTime      @default(now()) @map("created_at")
  updatedAt   DateTime      @updatedAt @map("updated_at")

  // Relations
  orders    ServiceInstance[]
  patient   Patient      @relation(fields: [patientId], references: [id])
  createdBy User         @relation("PaymentOrderCreatedBy", fields: [createdById], references: [id])
  payments  Payment[]

  @@map("ordenes_de_pago")
}

model Payment {
  id            String        @id @default(uuid())
  patientId     String        @map("patient_id")
  paymentOrderId String?      @map("payment_order_id")
  appointmentId String?       @map("appointment_id")
  amountPaid    Decimal       @map("amount_paid") @db.Decimal(10, 2)
  paymentMethod PaymentMethod @map("payment_method")
  paymentType   PaymentType   @map("payment_type")
  paymentDate   DateTime      @default(now()) @map("payment_date")
  receiptUrl    String?       @map("receipt_url")
  notes         String?
  createdById   String        @map("created_by_id")
  createdAt     DateTime      @default(now()) @map("created_at")

  // Relations
  patient     Patient      @relation(fields: [patientId], references: [id])
  paymentOrder PaymentOrder? @relation(fields: [paymentOrderId], references: [id])
  appointment Appointment? @relation(fields: [appointmentId], references: [id])
  createdBy   User         @relation("PaymentCreatedBy", fields: [createdById], references: [id])

  @@map("payments")
}

// ==========================================
// CONFIGURACIÓN DEL SISTEMA

model SystemSetting {
  key         String   @id
  value       String
  description String?
  updatedAt   DateTime @updatedAt @map("updated_at")
  updatedById String?  @map("updated_by_id")

  @@map("system_settings")
}

// ==========================================
// SISTEMA DE SUSCRIPCIONES (Stripe)
