//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table roles {
  id String [pk]
  name String [unique, not null]
  displayName String [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  users users [not null]
}

Table users {
  id String [pk]
  email String [unique, not null]
  passwordHash String [not null]
  firstName String [not null]
  lastName String [not null]
  roleId String
  sex Sex
  dateOfBirth DateTime
  isActive Boolean [not null, default: true]
  mustChangePassword Boolean [not null, default: false]
  themeMode String [not null, default: 'auto']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  role roles
  patientsCreated patients [not null]
  patientPasswordsSet patients [not null]
  ordersCreated service_instances [not null]
  appointmentsCreated appointments [not null]
  appointmentsAttended appointments [not null]
  patientRecords patient_records [not null]
  commissions commissions [not null]
  commissionsApproved commissions [not null]
  commissionsPaid commissions [not null]
  paymentOrdersCreated ordenes_de_pago [not null]
  paymentsCreated payments [not null]
  appointmentServicesDeleted sessions [not null]
  appointmentNotesCreated appointment_notes [not null]
}

Table patients {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  dni String [unique, not null]
  dateOfBirth DateTime [not null]
  sex Sex [not null]
  phone String
  email String
  address String
  createdById String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  photoUrl String
  passwordHash String
  hasPortalAccess Boolean [not null, default: false]
  lastLogin DateTime
  passwordSetByStaffId String
  passwordSetAt DateTime
  createdBy users [not null]
  passwordSetByStaff users
  orders service_instances [not null]
  appointments appointments [not null]
  patientRecords patient_records [not null]
  paymentOrders ordenes_de_pago [not null]
  payments payments [not null]
}

Table service_templates {
  id String [pk]
  name String [not null]
  description String
  basePrice Decimal [not null]
  defaultSessions Int [not null, default: 1]
  icon String
  isActive Boolean [not null, default: true]
  deletedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  commissionType String [default: 'percentage']
  commissionRate Decimal
  commissionFixedAmount Decimal
  commissionNotes String
  orders service_instances [not null]
  commissions commissions [not null]
}

Table service_instances {
  id String [pk]
  patientId String [not null]
  serviceTemplateId String [not null]
  totalSessions Int [not null]
  completedSessions Int [not null, default: 0]
  originalPrice Decimal [not null]
  discount Decimal [not null, default: 0]
  finalPrice Decimal [not null]
  notes String
  paymentOrderId String
  createdById String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  patient patients [not null]
  service service_templates [not null]
  createdBy users [not null]
  paymentOrder ordenes_de_pago
  appointmentServices sessions [not null]
  commissions commissions [not null]
}

Table appointments {
  id String [pk]
  patientId String [not null]
  scheduledDate DateTime [not null]
  durationMinutes Int [not null, default: 60]
  status AppointmentStatus [not null, default: 'reserved']
  reservationAmount Decimal
  reservationReceiptUrl String
  createdById String [not null]
  attendedById String
  attendedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  patient patients [not null]
  createdBy users [not null]
  attendedBy users
  patientRecords patient_records [not null]
  commissions commissions [not null]
  appointmentServices sessions [not null]
  payments payments [not null]
  appointmentNotes appointment_notes [not null]
}

Table appointment_notes {
  id String [pk]
  appointmentId String [not null]
  note String [not null]
  createdById String [not null]
  createdAt DateTime [default: `now()`, not null]
  appointment appointments [not null]
  createdBy users [not null]
}

Table patient_records {
  id String [pk]
  patientId String [not null]
  appointmentId String [not null]
  weight Decimal
  bodyMeasurement Json
  healthNotes String
  beforePhotoUrls Json
  afterPhotoUrls Json
  createdById String [not null]
  createdAt DateTime [default: `now()`, not null]
  patient patients [not null]
  appointment appointments [not null]
  createdBy users [not null]
}

Table commissions {
  id String [pk]
  salesPersonId String [not null]
  appointmentId String [not null]
  serviceInstanceId String
  serviceTemplateId String
  commissionRate Decimal [not null]
  baseAmount Decimal [not null]
  commissionAmount Decimal [not null]
  status CommissionStatus [not null, default: 'pending']
  approvedAt DateTime
  approvedById String
  paidAt DateTime
  paidById String
  paymentMethod PaymentMethod
  paymentReference String
  notes String
  rejectionReason String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  salesPerson users [not null]
  appointment appointments [not null]
  serviceInstance service_instances
  serviceTemplate service_templates
  approvedBy users
  paidBy users
}

Table sessions {
  id String [pk]
  appointmentId String [not null]
  serviceInstanceId String [not null]
  sessionNumber Int
  createdAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  deletedById String
  deleteReason String
  appointment appointments [not null]
  serviceInstance service_instances [not null]
  deletedBy users
}

Table ordenes_de_pago {
  id String [pk]
  patientId String [not null]
  totalAmount Decimal [not null]
  status PaymentOrderStatus [not null, default: 'pending']
  dueDate DateTime
  createdById String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orders service_instances [not null]
  patient patients [not null]
  createdBy users [not null]
  payments payments [not null]
}

Table payments {
  id String [pk]
  patientId String [not null]
  paymentOrderId String
  appointmentId String
  amountPaid Decimal [not null]
  paymentMethod PaymentMethod [not null]
  paymentType PaymentType [not null]
  paymentDate DateTime [default: `now()`, not null]
  receiptUrl String
  notes String
  createdById String [not null]
  createdAt DateTime [default: `now()`, not null]
  patient patients [not null]
  paymentOrder ordenes_de_pago
  appointment appointments
  createdBy users [not null]
}

Table system_settings {
  key String [pk]
  value String [not null]
  description String
  updatedAt DateTime [not null]
  updatedById String
}

Enum Sex {
  M
  F
  Other
}

Enum AppointmentStatus {
  reserved
  in_progress
  attended
  cancelled
  no_show
}

Enum PaymentMethod {
  cash
  card
  transfer
  yape
  plin
}

Enum CommissionStatus {
  pending
  approved
  paid
  cancelled
  rejected
}

Enum PaymentOrderStatus {
  pending
  partial
  paid
  cancelled
}

Enum PaymentType {
  payment_order_payment
  reservation
  service_payment
  account_credit
  penalty
  other
}

Ref: users.roleId > roles.id

Ref: patients.createdById > users.id

Ref: patients.passwordSetByStaffId > users.id

Ref: service_instances.patientId > patients.id

Ref: service_instances.serviceTemplateId > service_templates.id

Ref: service_instances.createdById > users.id

Ref: service_instances.paymentOrderId > ordenes_de_pago.id

Ref: appointments.patientId > patients.id

Ref: appointments.createdById > users.id

Ref: appointments.attendedById > users.id

Ref: appointment_notes.appointmentId > appointments.id [delete: Cascade]

Ref: appointment_notes.createdById > users.id

Ref: patient_records.patientId > patients.id

Ref: patient_records.appointmentId > appointments.id

Ref: patient_records.createdById > users.id

Ref: commissions.salesPersonId > users.id

Ref: commissions.appointmentId > appointments.id

Ref: commissions.serviceInstanceId > service_instances.id

Ref: commissions.serviceTemplateId > service_templates.id

Ref: commissions.approvedById > users.id

Ref: commissions.paidById > users.id

Ref: sessions.appointmentId > appointments.id [delete: Cascade]

Ref: sessions.serviceInstanceId > service_instances.id

Ref: sessions.deletedById > users.id

Ref: ordenes_de_pago.patientId > patients.id

Ref: ordenes_de_pago.createdById > users.id

Ref: payments.patientId > patients.id

Ref: payments.paymentOrderId > ordenes_de_pago.id

Ref: payments.appointmentId > appointments.id

Ref: payments.createdById > users.id